--- a/apijean-guy-loc/package.json
+++ b/apijean-guy-loc/package.json
@@ -29,6 +29,8 @@
     "@nestjs/typeorm": "^8.0.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
+    "moment": "^2.29.1",
+    "moment-range": "^4.0.2",
     "mysql": "^2.18.1",
     "passport": "^0.5.0",
     "passport-local": "^1.0.0",
